[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serverless-database-proxy"
version = "1.0.0"
description = "Lightweight client database proxy pooling connections and optimizing queries in serverless architectures."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
